[package]
name = "exporter"
version = "0.1.0"
authors = ["Leo Adamek <leo@adamek.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
iracing = "0.2.8"
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.7"
actix-web = "2.0.0"
actix = "0.9.0"
actix-rt = "1.0.0"
actix-codec = "0.5.0"
awc = {version = "1.0.1", features=["rustls"] }
futures = "0.3.4"
config = "0.9"