[package]
name = "iracing-websocket-server"
version = "0.1.0"
authors = ["Leo Adamek <leo@adamek.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde = "^1.0"
rmp-serde = "0.14.3"
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.7"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"